update play activity